--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,7 @@ on: [push, pull_request, workflow_dispatch]
 jobs:
   build:
     name: Ant Build
+    runs-on: ubuntu-latest
 
     if: "!contains(github.event.head_commit.message, '__CI__')"
 
@@ -96,6 +97,7 @@ jobs:
 
   maven_build:
     name: Maven Build
+    runs-on: ubuntu-latest
     if: "!contains(github.event.head_commit.message, '__CI__')"
     strategy:
       fail-fast: false
