--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,6 +9,7 @@ on:
 
 jobs:
   javadocs:
+    runs-on: ubuntu-latest
     if: "!contains(github.event.head_commit.message, '__CI__')"
     steps:
       - uses: actions/checkout@v3
@@ -41,6 +42,7 @@ jobs:
           DEST_DIR: "lucee/hibernate-extension/${{ env.VERSION }}/"
 
   tag_and_release:
+    runs-on: ubuntu-latest
     needs: [build, test, javadocs]
     steps:
       - uses: actions/checkout@v3
@@ -68,6 +70,7 @@ jobs:
           body: ${{ steps.tag_version.outputs.changelog }}
 
   publish:
+    runs-on: ubuntu-latest
     needs: [tag_and_release]
     steps:
       - name: Get Project Version
