--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,13 @@ jobs:
     - name: Build with Ant
       run: ant -noinput -verbose -buildfile build.xml
 
+    - name: Read version
+      id: current_version
+      # For Maven builds (future)
+      # run: echo "VERSION=`mvn help:evaluate -Dexpression=project.version -q -DforceStdout`" >> $GITHUB_ENV
+      # For Ant builds (still the default)
+      run: echo "VERSION=`ant -silent -quiet version`" >> $GITHUB_ENV
+
     - name: Upload Artifact
       uses: actions/upload-artifact@v3
       with:
