--- a/build.properties
+++ b/build.properties
@@ -9,4 +9,4 @@ description: Hibernate ORM (Hibernate in short) is an object-relational mapping 
  providing a framework for mapping an object-oriented domain model to a traditional relational database. 
  Hibernate solves object-relational impedance mismatch problems by replacing direct persistence-related 
  database accesses with high-level object handling functions.
-class: org.lucee.extension.orm.hibernate.HibernateORMEngine
+class: com.ortussolutions.hibernate.HibernateORMEngine
