--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,103 +4,16 @@
 name: Extension Build
 
 on: [push, pull_request, workflow_dispatch]
+  branches-ignore:
+      - main
+      - master
 
 jobs:
   build:
-    name: Ant Build
-    runs-on: ubuntu-latest
-
-    if: "!contains(github.event.head_commit.message, '__CI__')"
-
-    steps:
-    - uses: actions/checkout@v3
-
-    - name: Set up JDK 11
-      uses: actions/setup-java@v3
-      with:
-        java-version: '11'
-        distribution: 'temurin'
-
-    - name: Cache Maven packages
-      uses: actions/cache@v3
-      with:
-        path: ~/.m2
-        key: lucee-script-runner-maven-cache
-
-    # It's important this runs BEFORE the ant build increments the build number
-    - name: Read version
-      id: current_version
-      # For Maven builds (future)
-      # run: echo "VERSION=`mvn help:evaluate -Dexpression=project.version -q -DforceStdout`" >> $GITHUB_ENV
-      # For Ant builds (still the default)
-      run: echo "VERSION=`ant -silent -quiet version`" >> $GITHUB_ENV
-
-    - name: Build with Ant
-      run: ant -noinput -verbose -buildfile build.xml
-
-    - name: Upload Artifact
-      uses: actions/upload-artifact@v3
-      with:
-        name: hibernate_${{ env.VERSION }}.lex
-        path: dist/*.lex
+    uses: ./.github/workflows/build.yml
 
   test:
-    runs-on: ubuntu-latest
-    needs: build
-    env:
-      luceeVersion: 6.0.0.316-SNAPSHOT
-    steps:
-    - uses: actions/checkout@v3
-
-    - name: Set up JDK 11
-      uses: actions/setup-java@v3
-      with:
-        java-version: '11'
-        distribution: 'temurin'
-
-    - name: Checkout Lucee
-      uses: actions/checkout@v3
-      with:
-        repository: lucee/lucee
-        path: lucee
-
-    - name: Cache Lucee files
-      uses: actions/cache@v3
-      with:
-        path: _actions/lucee/script-runner/main/lucee-download-cache
-        key: lucee-downloads-${{ env.luceeVersion }}
-        restore-keys: |
-          lucee-downloads
-
-    - name: Read version
-      id: current_version
-      # For Maven builds (future)
-      # run: echo "VERSION=`mvn help:evaluate -Dexpression=project.version -q -DforceStdout`" >> $GITHUB_ENV
-      # For Ant builds (still the default)
-      run: echo "VERSION=`ant -silent -quiet version`" >> $GITHUB_ENV
-
-    - name: Download Artifact
-      uses: actions/download-artifact@master
-      with:
-        name: hibernate_${{ env.VERSION }}.lex
-        path: dist/
-
-    - name: Run Lucee Test Suite (testLabels="orm")
-      uses: lucee/script-runner@main
-      with:
-        webroot: ${{ github.workspace }}/lucee/test
-        execute: /bootstrap-tests.cfm
-        luceeVersion: light-${{ env.luceeVersion }}
-        extensionDir: ${{ github.workspace }}/dist
-      env:
-        testLabels: orm
-        testAdditional: ${{ github.workspace }}/tests
-    - name: Publish Test Results
-      uses: EnricoMi/publish-unit-test-result-action@v1
-      if: always()
-      with:
-        files: ${{ github.workspace }}/lucee/test/reports/junit-test-results-${{env.luceeVersion}}.xml
-        check_name: "Test Results"
+    uses: ./.github/workflows/test.yml
 
   maven_build:
     name: Maven Build
