--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,11 +8,8 @@ on:
       - master
 
 jobs:
-  build:
-    uses: ./.github/workflows/build.yml
-
-  test:
-    uses: ./.github/workflows/test.yml
+  build_and_test:
+    uses: ./.github/workflows/build_and_test.yml
 
   javadocs:
     runs-on: ubuntu-latest
@@ -49,7 +46,7 @@ jobs:
 
   tag_and_release:
     runs-on: ubuntu-latest
-    needs: [build, test, javadocs]
+    needs: [build_and_test, javadocs]
     steps:
       - uses: actions/checkout@v3
 
