🤖 CI: Run full Lucee version to attempt a CI fix

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -92,7 +92,7 @@ jobs:
       with:
         webroot: ${{ github.workspace }}/lucee/test
         execute: /bootstrap-tests.cfm
-        luceeVersion: light-${{ env.luceeVersion }}
+        luceeVersion: ${{ env.luceeVersion }}
         extensionDir: ${{ github.workspace }}/dist
       env:
         testLabels: orm
