--- a/build.properties
+++ b/build.properties
@@ -1,6 +1,6 @@
 bundlename: hibernate.extension
 bundleversion:5.4.29.
-versionAppendix: -BETA
+versionAppendix:
 id: D062D72F-F8A2-46F0-8CBC91325B2F067B
 luceeCoreVersion: 5.3.9.73
 releaseType: server
