--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -93,6 +93,10 @@ jobs:
     runs-on: ubuntu-latest
     needs: [gh_release]
     steps:
+      - uses: actions/checkout@v3
+        with:
+          token: ${{secrets.GH_TOKEN}}
+
       - name: Get Project Version
         id: current_version
         # For Maven builds (future)
