--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -117,12 +117,8 @@ jobs:
       - name: Setup CommandBox
         uses: Ortus-Solutions/setup-commandbox@main
         with:
-          forgeboxAPIKey: ${{ secrets.FORGEBOX_TOKEN }}
-      - name: Setup CommandBox
-        uses: Ortus-Solutions/setup-commandbox@v2.0.1
-        with:
-          forgeboxAPIKey: ${{ secrets.FORGEBOX_TOKEN }}
-https://s3.amazonaws.com/downloads.ortussolutions.com/lucee/extensions/hibernate/5.4.29.22/hibernate-orm-5.4.29.23.lex
+          forgeboxAPIKey: ${{ secrets.FORGEBOX_API_TOKEN }}
+
       - run: |
           box package set version=${{ env.VERSION }}
           box package set location="https://s3.amazonaws.com/downloads.ortussolutions.com/lucee/extensions/hibernate/${{ env.VERSION }}/hibernate_${{ env.VERSION }}.lex/"
