--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -69,14 +69,14 @@ jobs:
         uses: actions/download-artifact@master
         with:
           name: hibernate_${{ env.VERSION }}.lex
-          path: .tmp/hibernate_${{ env.VERSION }}.lex
+          path: .tmp/
 
       - name: Create a GitHub release
         uses: ncipollo/release-action@v1
         with:
           allowUpdates: true
           artifactErrorsFailBuild: true
-          artifacts: .tmp/hibernate_${{ env.VERSION }}.lex
+          artifacts: .tmp/
           replacesArtifacts: true
           tag: ${{ env.VERSION }}
           name: Release ${{ env.VERSION }}
@@ -90,7 +90,7 @@ jobs:
           AWS_S3_BUCKET: ${{ secrets.AWS_DOWNLOADS_BUCKET }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_ACCESS_SECRET }}
-          SOURCE_DIR: ".tmp/hibernate_${{ env.VERSION }}.lex"
+          SOURCE_DIR: ".tmp/"
           DEST_DIR: "lucee/extensions/hibernate/${{ env.VERSION }}/"
 
   publish:
