--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -93,6 +93,17 @@ jobs:
           SOURCE_DIR: ".tmp/"
           DEST_DIR: "lucee/extensions/hibernate/${{ env.VERSION }}/"
 
+      - name: Upload Logo to S3
+        uses: jakejarvis/s3-sync-action@master
+        with:
+          args: --acl public-read
+        env:
+          AWS_S3_BUCKET: ${{ secrets.AWS_DOWNLOADS_BUCKET }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_ACCESS_SECRET }}
+          SOURCE_DIR: "source/images/"
+          DEST_DIR: "lucee/extensions/hibernate/"
+
   publish:
     runs-on: ubuntu-latest
     needs: [gh_release]
