--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -29,7 +29,10 @@ jobs:
         path: ~/.m2
         key: lucee-script-runner-maven-cache
 
-    # It's important this runs BEFORE the ant build increments the build number
+    - name: Build with Ant
+      run: ant -noinput -verbose -buildfile build.xml
+
+    # It's important this runs AFTER the ant build increments the build number
     - name: Read version
       id: current_version
       # For Maven builds (future)
@@ -37,31 +40,20 @@ jobs:
       # For Ant builds (still the default)
       run: echo "VERSION=`ant -silent -quiet version`" >> $GITHUB_ENV
 
-    - name: Build with Ant
-      run: ant -noinput -verbose -buildfile build.xml
-
-    - name: Rename .lex to fix build number
-      run: mv dist/hibernate-orm-*.lex dist/hibernate_${{ env.VERSION }}.lex 
+    - name: Write out build version
+      run: echo ${{ env.VERSION }} > version.txt
 
     - name: Upload Artifact
       uses: actions/upload-artifact@v3
       with:
-        name: hibernate_${{ env.VERSION }}.lex
-        path: dist/*.lex
+        name: extension-version
+        path: version.txt
 
-  test:
-    runs-on: ubuntu-latest
-    needs: build
-    env:
-      luceeVersion: 6.0.0.316-SNAPSHOT
-    steps:
-    - uses: actions/checkout@v3
-
-    - name: Set up JDK 11
-      uses: actions/setup-java@v3
+    - name: Upload Artifact
+      uses: actions/upload-artifact@v3
       with:
-        java-version: '11'
-        distribution: 'temurin'
+        name: hibernate-lex
+        path: dist/*.lex
 
     - name: Checkout Lucee
       uses: actions/checkout@v3
@@ -77,19 +69,6 @@ jobs:
         restore-keys: |
           lucee-downloads
 
-    - name: Read version
-      id: current_version
-      # For Maven builds (future)
-      # run: echo "VERSION=`mvn help:evaluate -Dexpression=project.version -q -DforceStdout`" >> $GITHUB_ENV
-      # For Ant builds (still the default)
-      run: echo "VERSION=`ant -silent -quiet version`" >> $GITHUB_ENV
-
-    - name: Download Artifact
-      uses: actions/download-artifact@master
-      with:
-        name: hibernate_${{ env.VERSION }}.lex
-        path: dist/
-
     - name: Run Lucee Test Suite (testLabels="orm")
       uses: lucee/script-runner@main
       with:
@@ -100,6 +79,7 @@ jobs:
       env:
         testLabels: orm
         testAdditional: ${{ github.workspace }}/tests
+
     - name: Publish Test Results
       uses: EnricoMi/publish-unit-test-result-action@v1
       if: always()
