--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,12 +26,13 @@ jobs:
       - name: Generate Javadocs
         run: mvn --batch-mode -f pom.xml javadoc:javadoc
 
-      - name: Read version
-        id: current_version
-        # For Maven builds (future)
-        # run: echo "VERSION=`mvn help:evaluate -Dexpression=project.version -q -DforceStdout`" >> $GITHUB_ENV
-        # For Ant builds (still the default)
-        run: echo "VERSION=`ant -silent -quiet version`" >> $GITHUB_ENV
+      - name: Download built version number
+        uses: actions/download-artifact@master
+        with:
+          name: extension-version
+
+      - name: Read version file
+        run: echo "VERSION=`cat version.txt`" >> $GITHUB_ENV
 
       - name: Upload API Docs to S3
         uses: jakejarvis/s3-sync-action@master
@@ -80,7 +81,7 @@ jobs:
           artifacts: .tmp/ortus_orm_${{ env.VERSION }}.lex
           replacesArtifacts: true
           tag: ${{ env.VERSION }}
-          name: ${{ env.VERSION }}
+          name: v${{ env.VERSION }}
           body: ${{ steps.tag_version.outputs.changelog }}
 
       - name: Upload Artifact to S3
