🤖 CI: Try single quotes for release note assembly

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -76,10 +76,10 @@ jobs:
       - name: Assemble Release Notes
         run: |
           echo ${{ steps.changelog.outputs.markdown }} >> release.md
-          echo "---" >> release.md
-          echo "" >> release.md
-          echo "- [View on Forgebox](https://forgebox.io/view/D062D72F-F8A2-46F0-8CBC91325B2F067B/version/${{ env.VERSION }}) 🔍" >> release.md
-          echo "- [Read the javadocs](https://s3.amazonaws.com/apidocs.ortussolutions.com/lucee/hibernate-extension/${{ env.VERSION }}/index.html) 📖" >> release.md
+          echo '---' >> release.md
+          echo '' >> release.md
+          echo '- [View on Forgebox](https://forgebox.io/view/D062D72F-F8A2-46F0-8CBC91325B2F067B/version/${{ env.VERSION }}) 🔍' >> release.md
+          echo '- [Read the javadocs](https://s3.amazonaws.com/apidocs.ortussolutions.com/lucee/hibernate-extension/${{ env.VERSION }}/index.html) 📖' >> release.md
 
       - name: Create a GitHub release
         uses: ncipollo/release-action@v1
