--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -3,26 +3,33 @@ name: Build and Test
 # We are a reusable Workflow only
 on:
   workflow_call:
-    secrets:
-      SLACK_WEBHOOK_URL:
-        required: false
+  push:
+    branches-ignore:
+        - main
+        - master
+  pull_request:
+    branches-ignore:
+        - main
+        - master
 
 jobs:
   build:
-    name: Ant Build
+    name: Maven Build
     runs-on: ubuntu-latest
-    env:
-      luceeVersion: 6.0.0.316-SNAPSHOT
-
     if: "!contains(github.event.head_commit.message, '__CI__')"
+    strategy:
+      fail-fast: false
+      matrix:
+        lucee_version: ["5.3.10.97","6.0.0.316-SNAPSHOT"]
+        java_version: [ "8", "11", "17" ]
 
     steps:
     - uses: actions/checkout@v3
 
-    - name: Set up JDK 11
+    - name: Set up JDK
       uses: actions/setup-java@v3
       with:
-        java-version: '11'
+        java-version: '${{matrix.java_version}}'
         distribution: 'temurin'
 
     - name: Cache Maven packages
@@ -31,20 +38,14 @@ jobs:
         path: ~/.m2
         key: lucee-script-runner-maven-cache
 
-    # It's important this runs BEFORE the ant build increments the build number
     - name: Read version
-      # For Maven builds (future)
-      # run: echo "VERSION=`mvn help:evaluate -Dexpression=project.version -q -DforceStdout`" >> $GITHUB_ENV
-      # For Ant builds (still the default)
-      run: |
-        echo "VERSION=`ant -silent -quiet version`" >> $GITHUB_ENV
-        git checkout -- build.number
+      run: echo "VERSION=`mvn help:evaluate -Dexpression=project.version -q -DforceStdout`" >> $GITHUB_ENV
 
     - name: Write out build version
       run: echo ${{ env.VERSION }} > version.txt
 
-    - name: Build with Ant
-      run: ant -noinput -verbose -buildfile build.xml
+    - name: Build with Maven
+      run: mvn --batch-mode -f pom.xml -Dlucee.version=${{matrix.lucee_version}} -Djdk.version=${{matrix.java_version}} compile
 
     - name: Upload Artifact
       uses: actions/upload-artifact@v3
@@ -56,7 +57,7 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: ortus_orm_${{ env.VERSION }}.lex
-        path: dist/*.lex
+        path: target/*.lex
 
     - name: Checkout Lucee
       uses: actions/checkout@v3
@@ -68,7 +69,7 @@ jobs:
       uses: actions/cache@v3
       with:
         path: _actions/lucee/script-runner/main/lucee-download-cache
-        key: lucee-downloads-${{ env.luceeVersion }}
+        key: lucee-downloads-${{matrix.lucee_version}}
         restore-keys: |
           lucee-downloads
 
@@ -77,7 +78,7 @@ jobs:
       with:
         webroot: ${{ github.workspace }}/lucee/test
         execute: /bootstrap-tests.cfm
-        luceeVersion: ${{ env.luceeVersion }}
+        luceeVersion: ${{matrix.lucee_version}}
         extensionDir: ${{ github.workspace }}/dist
       env:
         testLabels: orm
@@ -87,5 +88,5 @@ jobs:
       uses: EnricoMi/publish-unit-test-result-action@v2.7.0
       if: always()
       with:
-        files: ${{ github.workspace }}/lucee/test/reports/junit-test-results-${{env.luceeVersion}}.xml
+        files: ${{ github.workspace }}/lucee/test/reports/junit-test-results-${{matrix.lucee_version}}.xml
         check_name: "Test Results"
