--- a/pom.xml
+++ b/pom.xml
@@ -2,15 +2,14 @@
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
 
-   <groupId>org.lucee</groupId>
+   <groupId>com.ortussolutions</groupId>
    <artifactId>hibernate.extension</artifactId>
-   <!-- look into the maven release plugin to automate bumping the version.-->
-   <version>5.4.29.75-BETA</version>
+   <version>5.4.29.24</version>
    <packaging>bundle</packaging>
 
-   <name>Ortus Hibernate Extension</name>
+   <name>Ortus ORM Extension</name>
    <description>Lucee Extension for Hibernate ORM Engine.</description>
-   <url>http://maven.lucee.org/extension/hibernate</url>
+   <url>https://forgebox.io/view/D062D72F-F8A2-46F0-8CBC91325B2F067B</url>
 
    <properties>
       <name>Hibernate ORM Engine</name>
@@ -51,6 +50,18 @@
          </roles>
          <timezone>+1</timezone>
       </developer>
+      <developer>
+         <id>michaelborn</id>
+         <name>Michael Born</name>
+         <email>michael@ortussolutions.com</email>
+         <organization>Ortus Solutions, Corp.</organization>
+         <organizationUrl>https://www.ortussolutions.com/</organizationUrl>
+         <roles>
+            <role>Project-Administrator</role>
+            <role>Developer</role>
+         </roles>
+         <timezone>-4</timezone>
+      </developer>
    </developers>
 
    <build>
@@ -76,31 +87,6 @@
                </execution>
             </executions>
          </plugin>
-         <!-- publish to central maven
-        <plugin>
-          <groupId>org.sonatype.plugins</groupId>
-          <artifactId>nexus-staging-maven-plugin</artifactId>
-          <version>1.6.3</version>
-          <extensions>true</extensions>
-          <configuration>
-            <serverId>ossrh</serverId>
-            <nexusUrl>https://oss.sonatype.org/</nexusUrl>
-            <autoReleaseAfterClose>true</autoReleaseAfterClose>
-          </configuration>
-        </plugin> -->
-
-         <!-- 
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-release-plugin</artifactId>
-          <version>2.5</version>
-          <configuration>
-            <autoVersionSubmodules>true</autoVersionSubmodules>
-            <useReleaseProfile>false</useReleaseProfile>
-            <releaseProfiles>release</releaseProfiles>
-            <goals>deploy</goals>
-          </configuration>
-        </plugin> -->
 
          <plugin>
             <groupId>org.apache.maven.plugins</groupId>
@@ -138,10 +124,10 @@
                      <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                      <Bundle-Name>${project.artifactId}</Bundle-Name>
                      <Private-Package>com.ortussolutions.hibernate</Private-Package>
-                     <Export-Package>
-                        com.ortussolutions.hibernate,com.ortussolutions.hibernate.jdbc
-                     </Export-Package>
-                     <Import-Package>net.sf.ehcache.hibernate</Import-Package>
+                     <!-- <Export-Package>
+                        com.ortussolutions.hibernate,com.ortussolutions.hibernate.jdbc,com.ortussolutions.hibernate.util
+                     </Export-Package> -->
+                     <Import-Package>net.sf.ehcache.hibernate;,!lucee.*;,!org.osgi.framework;,*</Import-Package>
                      <Require-Bundle>org.lucee.hibernate;bundle-version=5.4.29.1,org.lucee.antlr;bundle-version=2.7.6,org.lucee.javassist;bundle-version=3.9.0.GA,org.lucee.jta;bundle-version=1.1.0,slf4j.api;bundle-version=1.7.36,org.apache.commons.collections;bundle-version=3.2.1,org.lucee.xml.apis;bundle-version=1.4.1,com.fasterxml.classmate;bundle-version=1.5.1,net.bytebuddy.byte-buddy;bundle-version=1.10.21,org.lucee.hibernate-annotations;bundle-version=5.1.2.Final,javax.persistence-api;bundle-version=2.2,org.lucee.hibernate-ehcache;bundle-version=5.4.29.Final,org.lucee.ehcache;bundle-version=2.10.6,jakarta.xml.bind-api;bundle-version=2.3.3,org.glassfish.jaxb.runtime;bundle-version=2.3.4</Require-Bundle>
                      
                      <!-- 
