🤖 TEST: Switch build directory to hit maven target directory

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -79,7 +79,7 @@ jobs:
         webroot: ${{ github.workspace }}/lucee/test
         execute: /bootstrap-tests.cfm
         luceeVersion: ${{matrix.lucee_version}}
-        extensionDir: ${{ github.workspace }}/dist
+        extensionDir: ${{ github.workspace }}/target
       env:
         testLabels: orm
         testAdditional: ${{ github.workspace }}/tests
