--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -20,7 +20,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        lucee_version: ["5.3.10.97","6.0.0.316-SNAPSHOT"]
+        lucee_version: ["5.3.10.97","6.0.0.346-BETA"]
         java_version: [ "8", "11", "17" ]
 
     steps:
@@ -45,9 +45,9 @@ jobs:
       run: echo ${{ env.VERSION }} > version.txt
 
     - name: Build with Maven
-      run: mvn --batch-mode -f pom.xml -Dlucee.version=${{matrix.lucee_version}} -Djdk.version=${{matrix.java_version}} compile
+      run: mvn --batch-mode -f pom.xml -Dlucee.version=${{matrix.lucee_version}} -Djdk.version=${{matrix.java_version}} package
 
-    - name: Upload Artifact
+    - name: Upload Version
       uses: actions/upload-artifact@v3
       with:
         name: extension-version
