--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -20,7 +20,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        lucee_version: ["5.3.10.97","6.0.0.346-BETA"]
+        lucee_version: ["6.0.0.346-BETA"]
         java_version: [ "8", "11", "17" ]
 
     steps:
