--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -21,7 +21,7 @@ jobs:
       fail-fast: false
       matrix:
         lucee_version: ["6.0.0.346-BETA"]
-        java_version: [ "8", "11", "17" ]
+        java_version: [ "8", "11" ]
 
     steps:
     - uses: actions/checkout@v3
@@ -41,17 +41,8 @@ jobs:
     - name: Read version
       run: echo "VERSION=`mvn help:evaluate -Dexpression=project.version -q -DforceStdout`" >> $GITHUB_ENV
 
-    - name: Write out build version
-      run: echo ${{ env.VERSION }} > version.txt
-
     - name: Build with Maven
       run: mvn --batch-mode -f pom.xml -Dlucee.version=${{matrix.lucee_version}} -Djdk.version=${{matrix.java_version}} package
-
-    - name: Upload Version
-      uses: actions/upload-artifact@v3
-      with:
-        name: extension-version
-        path: version.txt
 
     - name: Upload Artifact
       uses: actions/upload-artifact@v3
