--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,9 +3,20 @@ name: Publish a Release
 
 on:
   workflow_dispatch:
+  # Reusable workflow : Usually called by a `snapshot` workflow
+  workflow_call:
+    inputs:
+      snapshot:
+          description: 'Is this a snapshot build?'
+          required: false
+          default: false
+          type: boolean
   push:
     tags:
       - v[0-9]+.*
+
+env:
+  SNAPSHOT: ${{ inputs.snapshot || false }}
 
 jobs:
   build_and_test:
@@ -61,20 +72,45 @@ jobs:
       - name: Read version
         run: echo "VERSION=`mvn help:evaluate -Dexpression=project.version -q -DforceStdout`" >> $GITHUB_ENV
 
-      - name: Read the changelog
-        id: changelog
-        uses: 3liz/changelog-release@0.2.0
-        with:
-          TAG_NAME: ${{ env.VERSION }}
-
       - name: Download Artifact
         uses: actions/download-artifact@master
         with:
           name: ortus_orm_${{ env.VERSION }}.lex
           path: .tmp/
 
+      - name: Update changelog [unreleased] with latest version
+        uses: thomaseizinger/keep-a-changelog-new-release@1.3.0
+        if: env.SNAPSHOT == 'false'
+        with:
+          changelogPath: ./changelog.md
+          tag: v${{ env.VERSION }}
+
+      - name: Commit Changelog To Master
+        uses: EndBug/add-and-commit@v9.1.1
+        if: env.SNAPSHOT == 'false'
+        with:
+          author_name: Github Actions
+          author_email: info@ortussolutions.com
+          message: 'Finalized changelog for v${{ env.VERSION }}'
+          add: changelog.md
+
+      - name: Tag Version
+        uses: rickstaa/action-create-tag@v1.6.1
+        if: env.SNAPSHOT == 'false'
+        with:
+          tag: "v${{ env.VERSION }}"
+          force_push_tag: true
+          message: "Latest Release v${{ env.VERSION }}"
+
+      - name: Read the changelog
+        id: changelog
+        uses: 3liz/changelog-release@0.2.0
+        with:
+          TAG_NAME: ${{ env.VERSION }}
+
       - name: Create a GitHub release
         uses: ncipollo/release-action@v1
+        if: env.SNAPSHOT == 'false'
         with:
           allowUpdates: true
           artifactErrorsFailBuild: true
