--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -70,18 +70,16 @@ jobs:
       - name: Read version
         run: echo "VERSION=`mvn help:evaluate -Dexpression=project.version -q -DforceStdout`" >> $GITHUB_ENV
 
-      - name: Download Artifact
-        uses: actions/download-artifact@master
+      - name: Build with Maven
+        run: mvn --batch-mode -f pom.xml -Dlucee.version=${{matrix.lucee_version}} -Djdk.version=${{matrix.java_version}} package
+
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v3
         with:
           name: ortus_orm_${{ env.VERSION }}.lex
-          path: .tmp/
+          path: target/*.lex
 
-      - name: Update changelog [unreleased] with latest version
-        uses: thomaseizinger/keep-a-changelog-new-release@1.3.0
-        if: env.SNAPSHOT == 'false'
-        with:
-          changelogPath: ./changelog.md
-          tag: v${{ env.VERSION }}
+      - run: cp target/*.lex .tmp/
 
       - name: Commit Changelog To Master
         uses: EndBug/add-and-commit@v9.1.1
